--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 		<title> Isabel's site </title>
 	</head>
 	<body>
-		<h1 style="font-size:500px">Haxed by T</h1>
+		<h1>Haxed by T</h1>
 	</body>
 </html>
