--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html> 
 	<head>
 		<title> Isabel's site </title>
+		<link rel="stylesheet" type="text/css" href="css.css">
 	</head>
 	<body>
 		<h2>Testing</h2>
