--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 		<link rel="stylesheet" type="text/css" href="css.css">
 	</head>
 	<body>
-		<h2>Testing</h2>
+		<h2>Welcome to isabel.pizza</h2>
 		<h1>Haxed by t</h1>
+			<p> this is where my links will go </p>
 	</body>
 </html>
