--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 		<link rel="stylesheet" type="text/css" href="css.css">
 	</head>
 	<body>
+		<div class="content">
 		<h2>Welcome to isabel.pizza</h2>
 		<h1>Haxed by t</h1>
 			<p> this is where my links will go </p>
+		</div>
 	</body>
 </html>
