--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <html> 
 	<head>
-		<title> Isabel's site </title>
+		<title> isabel.pizza </title>
 		<link rel="stylesheet" type="text/css" href="css.css">
 	</head>
 	<body>
 		<div class="content">
-		<h2>Welcome to isabel.pizza</h2>
-		<h1>Haxed by t</h1>
+		<h2>welcome to isabel.pizza</h2>
+		<h1>get ready for a #longread</h1>
+		<h3>5/9/15</h3>
 			<p> this is where my links will go </p>
 		</div>
 	</body>
