--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<h1>get ready for a #longread</h1>
 		<h3>5/9/15</h3>
 			<p>
-				In spiderman news - <a href="https://twitter.com/TylerHuckabee/status/591365206028095488/photo/1">something funny</a>, something sad 
+				In spiderman news - <a href="https://twitter.com/TylerHuckabee/status/591365206028095488/photo/1">something funny</a>, something sad <br><br>
 			</p>
 
 			<p>
@@ -64,7 +64,7 @@
 				A <a href="http://www.amnestyusa.org/research/reports/deadly-force-police-use-of-lethal-force-in-the-united-states">report</a> to back up what we've all been seeing.
 			</p>
 
-			
+
 		</div>
 	</body>
 </html>
