--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
 	</head>
 	<body>
 		<div class="content">
-		<h2>welcome to isabel.pizza</h2>
+		<h1>welcome to isabel.pizza</h1>
+			<h2>my site to update you on the reads I've been reading</h2>
 			<img src="http://i.imgur.com/syJJNir.jpg">
-		<h1>get ready for a #longread</h1>
+		<h2>get ready for a #longread</h2>
 		<h3>5/9/15</h3>
 			<p>
 				In spiderman news - <a href="https://twitter.com/TylerHuckabee/status/591365206028095488/photo/1">something funny</a>, something sad 
