--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<body>
 		<div class="content">
 		<h1>welcome to isabel.pizza</h1>
-			<p>my site to update you on the reads I've been reading</p>
+			<p id="subheading">my site to update you on the reads I've been reading</p>
 			<img src="http://i.imgur.com/syJJNir.jpg">
 			<br><br><br>
 		<h2>get ready for a #longread</h2>
