remove break in quotes section

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 			</p>
 			<p>
 				My fav Scalia marriage equality dissent moments: <br>
-					<blockquote>“The nature of marriage is that, through its enduring bond, two persons together can find other freedoms, such as expression, intimacy, and spirituality. (Really? Who ever thought that intimacy and spirituality [whatever that means] were freedoms? And if intimacy is, one would think Freedom of Intimacy is abridged rather than expanded by marriage. Ask the nearest hippie. Expression, sure enough, is a freedom, but anyone in a long-lasting marriage will attest that that happy state constricts, rather than expands, what one can prudently say.)"</blockquote> <br> How I imagine Scalia's marriage based on that quote: <iframe width="854" height="510" src="https://www.youtube.com/embed/0tq7luLwp1I" frameborder="0" allowfullscreen></iframe> <br>
-					<blockquote>"Not a single Southwesterner [is on the Supreme Court] or even, to tell the truth, a genuine Westerner (California does not count)." </blockquote><br>Probably because of all those damn hippies out there.
+					<blockquote>“The nature of marriage is that, through its enduring bond, two persons together can find other freedoms, such as expression, intimacy, and spirituality. (Really? Who ever thought that intimacy and spirituality [whatever that means] were freedoms? And if intimacy is, one would think Freedom of Intimacy is abridged rather than expanded by marriage. Ask the nearest hippie. Expression, sure enough, is a freedom, but anyone in a long-lasting marriage will attest that that happy state constricts, rather than expands, what one can prudently say.)"</blockquote> How I imagine Scalia's marriage based on that quote: <iframe width="854" height="510" src="https://www.youtube.com/embed/0tq7luLwp1I" frameborder="0" allowfullscreen></iframe> <br>
+					<blockquote>"Not a single Southwesterner [is on the Supreme Court] or even, to tell the truth, a genuine Westerner (California does not count)." </blockquote>Probably because of all those damn hippies out there.
 			</p>
 
 
